--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "checkout",
     "commercial",
     "commandlayer",
+    "ethereum",
+    "eth",
     "erc8004",
     "json-schema",
     "payments",
