--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -6,10 +6,15 @@ on:
   pull_request:
     branches: [ "main" ]
 
+# Cancel older runs of the same branch/PR
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   validate:
+    name: validate           # if branch protection expects a specific name, set it here
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,9 +23,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Validate schemas
         run: npm run validate:schemas
