--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -5,19 +5,28 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 # Cancel older runs of the same branch/PR
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
   validate:
-    name: validate           # if branch protection expects a specific name, set it here
+    name: validate
     runs-on: ubuntu-latest
+    env:
+      FORCE_COLOR: "1"
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -33,3 +42,16 @@ jobs:
 
       - name: Validate examples
         run: npm run validate:examples
+
+      - name: Generate checksums
+        run: node scripts/generate-checksums.mjs schemas/v1.0.0 checksums.txt
+
+      - name: Verify checksums are current
+        run: git diff --exit-code checksums.txt
+
+      - name: Upload checksums artifact (for debugging)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: checksums.txt
+          path: checksums.txt
