--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -3,7 +3,7 @@ name: Validate Schemas
 on:
   push:
     branches: ["main"]
-    tags-ignore: ["*"]  # <- do not run this workflow for tags
+    tags-ignore: ["*"]  # do not run this workflow for tags
   pull_request:
     branches: ["main"]
   workflow_dispatch:
@@ -21,12 +21,12 @@ jobs:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: "1"
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # Always checkout the exact SHA for PRs/pushes
           ref: ${{ github.sha }}
 
       - name: Normalize git on runner (LF)
